fixing wrong width

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ img {
     border-radius: 20px;
     padding: 20px;
     display: block;
-    max-width: 80vw;
-    max-height: 80vh;
+    max-width: 250px;
     box-shadow: 0px 10px 30px -10px hsl(226, 31%, 47%);
+    max-height: 80vh;
 }
